# LocationDetectionFromCCTV

./: CMakeLists.txt  LocationDetection.cpp  LocationDetection.h  LocationDetectionFromCCTV.sln  README.md  main.cpp
LocationDetectionFromCCTV/: LocationDetection.cpp  LocationDetection.h  LocationDetectionFromCCTV.vcxproj  LocationDetectionFromCCTV.vcxproj.filters  main.cpp
cmake/: add-libraries-linux.cmake  target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
